name:                rtorrent-cli
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Kai Lindholm
maintainer:          megantti@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable rcrc
  main-is:             Main.hs
  other-modules:       Render
  other-extensions:    TypeOperators, OverloadedStrings, ScopedTypeVariables
  build-depends:       base >=4.7 && <4.8, 
                       rtorrent-rpc >=0.2.1.0 && <0.3,
                       optparse-applicative >=0.11 && <0.12,
                       directory >= 1.2 && <1.3,
                       split
  -- hs-source-dirs:      
  default-language:    Haskell2010
