name:                rtorrent-cli
version:             0.3.0.0
license:             MIT
license-file:        LICENSE
author:              Kai Lindholm
maintainer:          megantti@gmail.com
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


executable rcrc
  main-is:             Main.hs
  other-modules:       Render
  other-extensions:    TypeOperators, OverloadedStrings, ScopedTypeVariables
  build-depends:       base,
                       rtorrent-rpc >= 0.3.0.0,
                       optparse-applicative,
                       directory,
                       split,
                       vector,
                       containers,
                       text,
                       vector-split
  default-language:    Haskell2010
